Lazy loading for associations with inheritance

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         {"name": "Benjamin Eberlei", "email": "kontakt@beberlei.de"},
         {"name": "Jonathan Wage", "email": "jonwage@gmail.com"}
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4",
         "ext-pdo": "*",
