--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ RUN apt-get update #forced
 RUN apt-get install -y apt-utils
 RUN apt-get install -y curl vim
 RUN apt-get install -y php5
-RUN apt-get install -y php5-mysql php5-curl php5-xdebug
+RUN apt-get install -y php5-mysql php5-curl php5-xdebug php5-sqlite
 
 RUN echo "date.timezone = Europe/Rome" >> /etc/php5/apache2/php.ini
 RUN echo "date.timezone = Europe/Rome" >> /etc/php5/cli/php.ini
