--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,5 @@
 php:
   build: .
-#  ports:
-#   - "80:80"
   volumes:
    - ..:/root/doctrine
   links:
@@ -9,5 +7,7 @@ php:
 
 db:
   image: mysql:5.6
+  ports:
+    - "3306:3306"
   environment:
     MYSQL_ROOT_PASSWORD: root
